Change React dependencies as dev- and peer-dependencies. Update for React versions.

--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "icons",
     "icon"
   ],
-  "dependencies": {
-    "@types/react": "16.7.20",
-    "@types/react-dom": "16.0.11",
-    "react": "16.7.0",
-    "react-dom": "16.7.0"
-  },
   "devDependencies": {
+    "@types/react": "16.9.1",
+    "@types/react-dom": "16.8.5",
+    "react": "16.6.3",
+    "react-dom": "16.6.3",
     "@svgr/webpack": "4.1.0",
     "awesome-typescript-loader": "5.2.1",
     "source-map-loader": "0.2.4",
     "typescript": "3.2.4",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1"
+  },
+  "peerDependencies": {
+    "react": "16.6.3",
+    "react-dom": "16.6.3"
   },
   "scripts": {
     "build": "webpack"
