--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,6 +64,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "skipLibCheck": true
   },
+  "files": ["./custom.d.ts"],
   "include": ["./src/**/*", "./custom.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
