--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@svgr/webpack": "4.1.0",
     "@types/react": "16.9.1",
     "@types/react-dom": "16.8.5",
-    "awesome-typescript-loader": "5.2.1",
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "source-map-loader": "0.2.4",
+    "ts-loader": "6.2.1",
     "typescript": "3.2.4",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1"
