--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,8 @@
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [
       "node_modules/@types",
-      "types"
+      "types",
+      "typings"
     ] /* List of folders to include type definitions from. */,
     // "types": [],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
@@ -64,7 +65,5 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     "skipLibCheck": true
   },
-  "files": ["./custom.d.ts"],
-  "include": ["./src/**/*", "./custom.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
