--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "webpack-cli": "3.3.11"
   },
   "peerDependencies": {
-    "react": "16.6.3",
-    "react-dom": "16.6.3"
+    "react": ">=16.3",
+    "react-dom": ">=16.3"
   },
   "scripts": {
     "build": "webpack"
