--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
   ],
   "devDependencies": {
     "@svgr/webpack": "5.4.0",
-    "@types/react": "16.9.46",
+    "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "source-map-loader": "1.0.1",
-    "ts-loader": "8.0.2",
-    "typescript": "3.9.7",
+    "source-map-loader": "1.1.0",
+    "terser-webpack-plugin": "4.1.0",
+    "ts-loader": "8.0.3",
+    "typescript": "4.0.2",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12"
   },
@@ -40,6 +41,6 @@
     "react-dom": ">=16.3"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --env.production"
   }
 }
