--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
   ],
   "devDependencies": {
     "@svgr/webpack": "5.4.0",
-    "@types/react": "16.9.49",
-    "@types/react-dom": "16.9.8",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "source-map-loader": "1.1.0",
-    "terser-webpack-plugin": "4.1.0",
-    "ts-loader": "8.0.3",
-    "typescript": "4.0.2",
-    "webpack": "4.44.1",
-    "webpack-cli": "3.3.12"
+    "@types/react": "16.9.56",
+    "@types/react-dom": "16.9.9",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "source-map-loader": "1.1.2",
+    "terser-webpack-plugin": "5.0.3",
+    "ts-loader": "8.0.9",
+    "typescript": "4.0.5",
+    "webpack": "5.4.0",
+    "webpack-cli": "4.2.0"
   },
   "peerDependencies": {
     "react": ">=16.3",
     "react-dom": ">=16.3"
   },
   "scripts": {
-    "build": "webpack --env.production"
+    "build": "webpack --env production"
   }
 }
