--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "suomifi-icons",
-  "version": "1.1.1",
+  "version": "2.0.0-alpha.9",
   "description": "Suomi.fi icons-library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -41,6 +41,7 @@
     "react-dom": ">=16.3"
   },
   "scripts": {
+    "prepare": "yarn run build",
     "build": "webpack --env production"
   }
 }
