--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "suomifi-icons",
-  "version": "2.0.0-alpha.9",
+  "version": "1.1.1",
   "description": "Suomi.fi icons-library",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,6 +13,11 @@
     "url": "git+https://github.com/vrk-kpa/suomifi-icons.git"
   },
   "author": "Joonas Kallunki <jkallunki@gmail.com> (https://jkallunki.net/)",
+  "contributors": [
+    "Aappo Ålander",
+    "Joonas Kaski",
+    "Sami Korpela"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/vrk-kpa/suomifi-icons/issues"
