--- a/package.json
+++ b/package.json
@@ -29,21 +29,24 @@
     "icon"
   ],
   "devDependencies": {
-    "@svgr/webpack": "5.4.0",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.9",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "source-map-loader": "1.1.2",
-    "terser-webpack-plugin": "5.0.3",
-    "ts-loader": "8.0.9",
-    "typescript": "4.0.5",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.2.0"
+    "@svgr/webpack": "5.5.0",
+    "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "source-map-loader": "3.0.0",
+    "terser-webpack-plugin": "5.1.3",
+    "ts-loader": "9.2.3",
+    "typescript": "4.3.4",
+    "webpack": "5.40.0",
+    "webpack-cli": "4.7.2"
   },
   "peerDependencies": {
     "react": ">=16.3",
     "react-dom": ">=16.3"
+  },
+  "resolutions": {
+    "css-what": "^5.0.1"
   },
   "scripts": {
     "prepare": "yarn run build",
