--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "suomifi-icons",
-  "version": "7.0.0",
-  "main": "dist/index.d.js",
-  "module": "dist/index.esm.js",
+  "version": "7.0.0-test7",
+  "main": "dist/index.d.ts",
+  "module": "dist/index.d.ts",
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.18.10",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^14.0.0",
     "@svgr/cli": "^6.3.1",
@@ -27,9 +28,14 @@
     "typescript": "^4.8.2"
   },
   "scripts": {
-    "clean": "rm -rf src/illustrativeIcons && rm -rf dist",
-    "svgr": "svgr --icon --typescript -d src/illustrativeIcons assets/illustrativeIcons --svgo-config svgo.config-illu.js",
-    "build": "yarn run clean && yarn run svgr && rollup -c"
+    "clean": "rm -rf dist",
+    "svgr": "svgr --icon --typescript -d src/illustrativeIcons assets/illustrativeIcons --svgo-config svgo.config.js",
+    "build": "yarn run clean && rollup -c"
   },
-  "dependencies": {}
+  "peerDependencies": {
+    "react": "^16.2.0"
+  },
+  "dependencies": {
+    "classnames": "^2.3.1"
+  }
 }
