--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": ["src"],
+  "include": ["src/**/*", "assets/index.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
