add styled-components, remove redundant dependencies

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "suomifi-icons",
-  "version": "7.0.0-test7",
-  "main": "dist/index.d.ts",
-  "module": "dist/index.d.ts",
-  "types": "dist/index.d.ts",
+  "version": "7.0.0-test22",
+  "main": "./dist/index.d.ts",
+  "module": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vrk-kpa/suomifi-icons.git"
@@ -14,14 +13,13 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.18.10",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^14.0.0",
-    "@svgr/cli": "^6.3.1",
     "@svgr/rollup": "^6.3.1",
-    "@types/react": "^18.0.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.26",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "rollup": "^2.79.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.33.0",
@@ -29,11 +27,12 @@
   },
   "scripts": {
     "clean": "rm -rf dist",
-    "svgr": "svgr --icon --typescript -d src/illustrativeIcons assets/illustrativeIcons --svgo-config svgo.config.js",
-    "build": "yarn run clean && rollup -c"
+    "createComponents": "yarn node src/utils/createComponents",
+    "build": "yarn run clean && rollup -c && node src/utils/frank.js"
   },
   "peerDependencies": {
-    "react": "^16.2.0"
+    "react": "^16.2.0",
+    "styled-components": "^5.3.6"
   },
   "dependencies": {
     "classnames": "^2.3.1"
