--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "dist",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "declaration": true,
-    "declarationDir": "dist",
+    "declarationDir": "./dist/types",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
