--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "suomifi-icons",
-  "version": "7.0.0",
+  "version": "7.0.0-beta.0",
   "sideEffects": false,
   "repository": {
     "type": "git",
@@ -35,8 +35,8 @@
     "copytypes": "yarn node copyTypes.js && rm -rf dist/types"
   },
   "peerDependencies": {
-    "react": "^16.2.0",
-    "styled-components": "^5.3.6"
+    "react": ">=16.2.0",
+    "styled-components": ">=5.3.6"
   },
   "dependencies": {
     "classnames": "^2.3.1"
