--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "svgr": "rm -rf svgrComponents && yarn node runSVGR.js",
     "generate": "rm -rf src/index.ts src/baseIcons src/componentIcons src/doctypeIcons src/illustrativeIcons src/logoIcons && yarn node createComponents",
     "build": "yarn run clean && rollup -c && yarn node frank.js",
-    "frank": "yarn node frank.js",
-    "copytypes": "yarn node copyTypes.js && rm -rf dist/types"
+    "frank": "yarn node frank.js"
   },
   "peerDependencies": {
     "react": ">=16.2.0",
