--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fs-extra": "^11.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "rimraf": "^5.0.0",
     "rollup": "^2.79.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.33.0",
@@ -31,9 +32,9 @@
   },
   "scripts": {
     "prepublish": "yarn run build",
-    "clean": "rm -rf dist",
-    "svgr": "rm -rf svgrComponents && yarn node runSVGR.js",
-    "generate": "rm -rf src/index.ts src/baseIcons src/componentIcons src/doctypeIcons src/illustrativeIcons src/logoIcons && yarn node createComponents",
+    "clean": "rimraf dist",
+    "svgr": "rimraf svgrComponents && yarn node runSVGR.js",
+    "generate": "rimraf src/index.ts src/baseIcons src/componentIcons src/doctypeIcons src/illustrativeIcons src/logoIcons && yarn node createComponents",
     "build": "yarn run clean && rollup -c && yarn node frank.js",
     "frank": "yarn node frank.js"
   },
