--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "suomifi-icons",
-  "version": "7.0.0-beta.1",
+  "version": "7.0.0",
   "main": "./cjs/src/index.js",
   "module": "./esm/src/index.js",
   "typings": "./types/src/index.d.ts",
